# pylight

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  README.md.backup  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  sitemap.xml  test_websocket_local.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: deploy-docs.yml  publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
api/: index.html
api-reference/: index.html
api-reference/authentication-classes/: index.html
api-reference/caching-classes/: index.html
api-reference/configuration-options/: index.html
api-reference/light-api/: index.html
api-reference/rest-endpoint/: index.html
api-reference/websocket-classes/: index.html
building-apis/: index.html
building-apis/authentication/: index.html
building-apis/caching/: index.html
building-apis/database-reflection/: index.html
building-apis/graphql/: index.html
building-apis/pagination-filtering-sorting/: index.html
building-apis/plugins/: index.html
building-apis/rest-endpoints/: index.html
building-apis/websocket/: index.html
building-apis/yaml-configuration/: index.html
charts/pylight/: .helmignore  Chart.yaml  README.md  test-values.yaml  values.schema.json  values.yaml
cli/: __init__.py  __main__.py  click_compat.py
cli/commands/: generate.py  init.py  migrate.py  reflect.py  start.py
customization/: index.html
customization/custom-authentication/: index.html
customization/custom-caching/: index.html
customization/deployment/: index.html
customization/error-handling/: index.html
customization/middleware/: index.html
docs/: index.md
docs/api-reference/: authentication-classes.md  caching-classes.md  configuration-options.md  index.md  light-api.md  rest-endpoint.md  websocket-classes.md
examples/: app_module.py  basic_usage.py  comprehensive_integration.py  db_utils.py  index.html  populate-test-database-config.yaml  rest_endpoints.py  test_config.yaml  test_config_class.py  utils.py
getting-started/: index.html
scripts/: generate_jwt_fixtures.py  generate_test_keys.py  test_yaml_config.sh
search/: search_index.json
src/: __init__.py
troubleshooting/: index.html
use-cases/: index.html
(+214 files in other folders)
